--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
 .app {
   width: 100%;
 }
